# puzzles

./: .gitignore  CMakeLists.txt  README.md  clihelp.txt  colors.hpp  common.cpp  common.hpp  config.h.in  config.hpp.in  game.cpp  game.hpp  gradient.cpp  gradient.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  palette.cpp  palette.hpp  table.cpp  table.hpp  tablemodel.cpp  tablemodel.hpp  tableviewitemdelegate.cpp  tableviewitemdelegate.hpp
inc/: app.h  config.h  loopover.h  puzzle.h  render.h  slic.h
src/: app.cpp  loopover.cpp  main.cpp  puzzle.cpp  render.cpp
static/: res.qrc
static/styles/: style.qss
static/ui/: mainwindow.ui
toxy/: CMakeLists.txt  config.h.in
toxy/inc/: config.h
toxy/src/: app.cpp  app.h  loopover.cpp  loopover.h  main.cpp  puzzle.cpp  puzzle.h  render.cpp  render.h  slic.cpp  slic.h  table.h
